--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,10 @@
     --rotate: 360deg;
   }
 }
-@property {
-  --rotate {
-    syntax: "<angle>";
-    initial-value: 132deg;
-    inherits: false;
-  }
+:root {
+  --rotate: 132deg;
 }
+
 :root {
   --card-height: 55vh;
   --card-width: calc(var(--card-height) / 1.5);
